# -Engineering_Image_Retrieval_System_Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
doc/: 01_Business_Logic_Analysis.md  02_Architecture_Insights.md  03_API_Specification.yaml
nginx/: default.conf
src/: API_POSTMAN_GUIDE.md  API_REFERENCE.md  main.py  repo.py  router.py  schemas.py  service.py
src/vector_search/: __init__.py  database.py  debug_pipeline.py  engine.py  feature_extractor.py  image_preprocessing3.py  indexer.py  interfaces.py  router.py  simsiam2.py  test.py  utils.py  visualizer.py
templates/: index.html
